# dyld-tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
mach_o/: ChainedFixups.cpp  LinkerOptimizationHints.cpp
stubs/: CrashReporterClient.h  PrebuiltLoader_version.h  _simple.h  compat_availability.h  dyld-interposing.h  dyld_cache_format.h  dyld_introspection.h  dyld_priv.h  fixup-chains.h  function-variant-macros.h  libamfi.h  libc_private.h  libutil.h  vproc_priv.h
stubs/CommonCrypto/: CommonDigestSPI.h
stubs/SoftLinking/: WeakLinking.h
stubs/System/: atexit.h
stubs/System/mach/: dyld_pager.h
stubs/System/machine/: cpu_capabilities.h
stubs/System/sys/: commpage.h  content_protection.h  csr.h  fsgetpath.h  mman.h  proc.h  reason.h
stubs/corecrypto/: ccdigest.h  ccsha1.h  ccsha2.h
stubs/dyld/: VersionMap.h
stubs/ktrace/: session.h
stubs/mach-o/: dyld.h  dyld_introspection.h  dyld_process_info.h
stubs/os/: atomic_private.h  lock_private.h  security_config_private.h
stubs/pthread/: tsd_private.h
stubs/sandbox/: private.h
stubs/sys/: kdebug_private.h  kern_memorystatus.h
